--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
